; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/ecpg/ecpglib/extr_descriptor.c_get_char_item.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/ecpg/ecpglib/extr_descriptor.c_get_char_item.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ECPGgeneric_varchar = type { i8*, i32 }

@ECPG_VAR_NOT_CHAR = common dso_local global i32 0, align 4
@ECPG_SQLSTATE_RESTRICTED_DATA_TYPE_ATTRIBUTE_VIOLATION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, i32, i8*, i32)* @get_char_item to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_char_item(i32 %0, i8* %1, i32 %2, i8* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca %struct.ECPGgeneric_varchar*, align 8
  store i32 %0, i32* %7, align 4
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i8* %3, i8** %10, align 8
  store i32 %4, i32* %11, align 4
  %13 = load i32, i32* %9, align 4
  switch i32 %13, label %57 [
    i32 131, label %14
    i32 129, label %14
    i32 130, label %14
    i32 128, label %19
  ]

14:                                               ; preds = %5, %5, %5
  %15 = load i8*, i8** %8, align 8
  %16 = load i8*, i8** %10, align 8
  %17 = load i32, i32* %11, align 4
  %18 = call i32 @strncpy(i8* %15, i8* %16, i32 %17)
  br label %62

19:                                               ; preds = %5
  %20 = load i8*, i8** %8, align 8
  %21 = bitcast i8* %20 to %struct.ECPGgeneric_varchar*
  store %struct.ECPGgeneric_varchar* %21, %struct.ECPGgeneric_varchar** %12, align 8
  %22 = load i32, i32* %11, align 4
  %23 = icmp eq i32 %22, 0
  br i1 %23, label %24, label %32

24:                                               ; preds = %19
  %25 = load %struct.ECPGgeneric_varchar*, %struct.ECPGgeneric_varchar** %12, align 8
  %26 = getelementptr inbounds %struct.ECPGgeneric_varchar, %struct.ECPGgeneric_varchar* %25, i32 0, i32 0
  %27 = load i8*, i8** %26, align 8
  %28 = load i8*, i8** %10, align 8
  %29 = load i8*, i8** %10, align 8
  %30 = call i32 @strlen(i8* %29)
  %31 = call i32 @memcpy(i8* %27, i8* %28, i32 %30)
  br label %39

32:                                               ; preds = %19
  %33 = load %struct.ECPGgeneric_varchar*, %struct.ECPGgeneric_varchar** %12, align 8
  %34 = getelementptr inbounds %struct.ECPGgeneric_varchar, %struct.ECPGgeneric_varchar* %33, i32 0, i32 0
  %35 = load i8*, i8** %34, align 8
  %36 = load i8*, i8** %10, align 8
  %37 = load i32, i32* %11, align 4
  %38 = call i32 @strncpy(i8* %35, i8* %36, i32 %37)
  br label %39

39:                                               ; preds = %32, %24
  %40 = load i8*, i8** %10, align 8
  %41 = call i32 @strlen(i8* %40)
  %42 = load %struct.ECPGgeneric_varchar*, %struct.ECPGgeneric_varchar** %12, align 8
  %43 = getelementptr inbounds %struct.ECPGgeneric_varchar, %struct.ECPGgeneric_varchar* %42, i32 0, i32 1
  store i32 %41, i32* %43, align 8
  %44 = load i32, i32* %11, align 4
  %45 = icmp sgt i32 %44, 0
  br i1 %45, label %46, label %56

46:                                               ; preds = %39
  %47 = load %struct.ECPGgeneric_varchar*, %struct.ECPGgeneric_varchar** %12, align 8
  %48 = getelementptr inbounds %struct.ECPGgeneric_varchar, %struct.ECPGgeneric_varchar* %47, i32 0, i32 1
  %49 = load i32, i32* %48, align 8
  %50 = load i32, i32* %11, align 4
  %51 = icmp sgt i32 %49, %50
  br i1 %51, label %52, label %56

52:                                               ; preds = %46
  %53 = load i32, i32* %11, align 4
  %54 = load %struct.ECPGgeneric_varchar*, %struct.ECPGgeneric_varchar** %12, align 8
  %55 = getelementptr inbounds %struct.ECPGgeneric_varchar, %struct.ECPGgeneric_varchar* %54, i32 0, i32 1
  store i32 %53, i32* %55, align 8
  br label %56

56:                                               ; preds = %52, %46, %39
  br label %62

57:                                               ; preds = %5
  %58 = load i32, i32* %7, align 4
  %59 = load i32, i32* @ECPG_VAR_NOT_CHAR, align 4
  %60 = load i32, i32* @ECPG_SQLSTATE_RESTRICTED_DATA_TYPE_ATTRIBUTE_VIOLATION, align 4
  %61 = call i32 @ecpg_raise(i32 %58, i32 %59, i32 %60, i32* null)
  store i32 0, i32* %6, align 4
  br label %63

62:                                               ; preds = %56, %14
  store i32 1, i32* %6, align 4
  br label %63

63:                                               ; preds = %62, %57
  %64 = load i32, i32* %6, align 4
  ret i32 %64
}

declare dso_local i32 @strncpy(i8*, i8*, i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @ecpg_raise(i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
